@@ -1,9 +1,9 @@
 package com.krince.memegle.admin.domain.post.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.krince.memegle.admin.domain.post.dto.response.ResponseGetAdminPostsDto;
 import com.krince.memegle.admin.domain.post.service.PostService;
 import com.krince.memegle.global.Role;
+import com.krince.memegle.global.response.ResponseCode;
 import com.krince.memegle.global.security.CustomUserDetails;
 import com.krince.memegle.global.security.CustomUserDetailsService;
 import com.krince.memegle.global.security.JwtProvider;
@@ -17,7 +17,6 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.anything;
@@ -45,22 +44,20 @@ class PostControllerTest {
     @MockBean
     PostService postService;
 
-    @Autowired
-    ObjectMapper objectMapper;
-
     @BeforeEach
     public void before() {
 
     }
 
     @Test
-    @DisplayName("개발자 메인 페이지 조회 테스트")
+    @DisplayName("관리자 메인 페이지 조회 테스트")
     void getAdminPostsTest() throws Exception {
         when(userDetailsService.loadUserById(1L)).thenReturn(new CustomUserDetails(1L, Role.ROLE_ADMIN));
         String token = jwtProvider.createAccessToken(1L, Role.ROLE_ADMIN);
+        ResponseCode responseCode = ResponseCode.OK;
 
         ResponseGetAdminPostsDto postDto1 = ResponseGetAdminPostsDto.builder().build();
-        List<ResponseGetAdminPostsDto> posts = Arrays.asList(postDto1);
+        List<ResponseGetAdminPostsDto> posts = List.of(postDto1);
         when(postService.getAdminPosts()).thenReturn(posts);
 
         mockMvc.perform(
@@ -70,10 +67,10 @@ class PostControllerTest {
                 )
                 .andDo(print())
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("success").value(true))
-                .andExpect(jsonPath("status").value("OK"))
-                .andExpect(jsonPath("code").value(20000))
-                .andExpect(jsonPath("message").value("요청이 성공적으로 처리되었습니다. 요청한 데이터를 반환합니다."))
+                .andExpect(jsonPath("success").value(responseCode.getIsSuccess()))
+                .andExpect(jsonPath("status").value(responseCode.getHttpStatus()))
+                .andExpect(jsonPath("code").value(responseCode.getCode()))
+                .andExpect(jsonPath("message").value(responseCode.getMessage()))
                 .andExpect(jsonPath("results[0].postId").value(anything()))
                 .andExpect(jsonPath("results[0].imageId").value(anything()))
                 .andExpect(jsonPath("results[0].mimeImageUrl").value(anything()))
